# ClaudeSkills

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Geek-skills-a-share-analyst.skill  Geek-skills-c-drive-cleaner.skill  Geek-skills-gaokao-expert.skill  Geek-skills-mineru-pdf-parser.skill  Geek-skills-openspec-apply-change.skill  Geek-skills-openspec-archive-change.skill  Geek-skills-openspec-explore.skill  Geek-skills-openspec-propose.skill  Geek-skills-pair-programming.skill  Geek-skills-ppt-designer.skill  Geek-skills-product-manager.skill  Geek-skills-security-audit.skill  Geek-skills-seedream-imagegen.skill  Geek-skills-solution-architect.skill  Geek-skills-threejs-performance.skill  Geek-skills-university-exam-prep.skill  Geek-skills-weather-forecast-report.skill  Geek-skills-wechat-article-writer.skill  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: validate.yml
lab/: README.md
lab/Geek-skills-gaokao-expert/: SKILL.md
lab/Geek-skills-podcast-generator/: SKILL.md
lab/Geek-skills-university-exam-prep/: SKILL.md
lab/Geek-skills-weather-forecast-report/: SKILL.md
llm-wiki/: SKILL.md
llm-wiki/references/: article-templates.md  wiki-schema.md
prompts/coding/: README.md  code-review.md  code-review.zh-CN.md
prompts/writing/: blog-post.md  blog-post.zh-CN.md
scripts/: install_skill.py  run_routing_evals.py  validate.py
skills/: C Drive Cleaner Skill.skill  seedream-imagegen.skill  test_skill.py  高考专家技能开发.skill  高考命题专家技能.skill
skills/Geek-skills-a-share-analyst/: SKILL.md
skills/Geek-skills-ai-sales-champion/: SKILL.md
skills/Geek-skills-c-drive-cleaner/: SKILL.md
skills/Geek-skills-deck-studio/: SKILL.md
skills/Geek-skills-deep-research/: SKILL.md
skills/Geek-skills-gaokao-expert/: SKILL.md
skills/Geek-skills-hermes-tweet-xquik/: SKILL.md
skills/Geek-skills-keqian-method/: SKILL.md
skills/Geek-skills-mineru-pdf-parser/: SKILL.md
skills/Geek-skills-openspec-apply-change/: SKILL.md
skills/Geek-skills-openspec-archive-change/: SKILL.md
skills/Geek-skills-openspec-explore/: SKILL.md
skills/Geek-skills-openspec-propose/: SKILL.md
skills/Geek-skills-pair-programming/: SKILL.md
skills/Geek-skills-podcast-generator/: SKILL.md
skills/Geek-skills-ppt-designer/: SKILL.md
skills/Geek-skills-product-manager/: SKILL.md
skills/Geek-skills-security-audit/: SKILL.md
skills/Geek-skills-seedream-imagegen/: SKILL.md
skills/Geek-skills-solution-architect/: SKILL.md
skills/Geek-skills-threejs-performance/: SKILL.md
skills/Geek-skills-university-exam-prep/: SKILL.md
skills/Geek-skills-weather-forecast-report/: SKILL.md
skills/Geek-skills-wechat-article-writer/: SKILL.md
skills/Geek-skills-xuefeng-method/: SKILL.md
skills/code-review/: SKILL.md  使用说明.md
skills/feature-builder/: SKILL.md
(+180 files in other folders)
